--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     </style>
 </head>
 <body>
-<script src="../lib/microapp.js"></script>
-<script>sayHello()</script>
-<img src="logo.png" style="width:72px;"/>
+<script src="js/microapp.js"></script>
+<script>
+    console.log(getAyoba())
+</script>
+<h1>Hello world on AYOBA</h1>
 </body>
 </html>
